--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0",
+  "version": "1.0.2",
   "name": "react-native-togglebox",
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
     "visibility"
   ],
   "dependencies": {
-    "prop-types": "^15.5.10"
+    "prop-types": "^15.5.10",
+    "react-style-proptype": "^3.0.0"
   }
 }
